--- a/css/spinload.css
+++ b/css/spinload.css
@@ -5,7 +5,7 @@
 	left:0;
 	right:0;
 	bottom:0;
-	background-color:#ef6a8a; /* change if the mask should have another color then white */
+	background-color:#ffe4e1 ; /* change if the mask should have another color then white */
 	z-index:9999999; /* makes sure it stays on top */
 }
 
