--- a/css/spinload.css
+++ b/css/spinload.css
@@ -21,7 +21,7 @@
 }
 
 .spinner > div {
-	background-color: #fff;
+	background-color: #0e2f44;
 	height: 100%;
 	width: 6px;
 	display: inline-block; 
